# SignalFlux

./: .gitignore  CMakeLists.txt  README.md
include/core/: sigflx_signal.h  signal.h
include/io/: sigflx_io_byte.h
include/sigflx_lib/: sigflx_allocator.h  sigflx_allocators.h  sigflx_allocators_aligned.h  sigflx_allocators_buffer_pool.h  sigflx_allocators_fixed_pool.h  sigflx_complex.h  sigflx_container_array.h  sigflx_container_vector.h  sigflx_container_vector_view.h  sigflx_math_bits.h  sigflx_math_complex.h  sigflx_math_complex_methods.h  sigflx_math_constant.h  sigflx_platform_allocator.h  sigflx_platform_compiler_bulitin.h  sigflx_platform_detect.h  sigflx_platform_random_device.h  sigflx_random_base_engine.h  sigflx_random_device.h  sigflx_strings_c_methods.h  system_detect.h
src/core/: sigflx_signal.tpp
src/io/: sigflx_io_byte.tpp
src/sigflx_lib/: sigflx_allocator.tpp  sigflx_allocators.tpp  sigflx_allocators_aligned.tpp  sigflx_allocators_buffer_pool.tpp  sigflx_allocators_fixed_pool.tpp  (+9 more)
test/: CMakeLists.txt  sigflx_allocator_test.cpp  sigflx_allocators_buffer_pool_test.cpp  sigflx_allocators_fixed_pool_test.cpp  sigflx_complex_test.cpp  sigflx_container_array_test.cpp  sigflx_container_vector_test.cpp  sigflx_container_vector_view_test.cpp  sigflx_io_byte_test.cpp  sigflx_math_bits_test.cpp  sigflx_math_complex_test.cpp  sigflx_math_constant_test.cpp  sigflx_platform_compiler_builtin_test.cpp  sigflx_random_device.cpp  sigflx_signal_iterator_test.cpp  sigflx_signal_test.cpp  sigflx_strings_c_methods_test.cpp  system_detect_test.cpp
